--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
 }
 
 a {
@@ -14,3 +15,29 @@ a {
 * {
   box-sizing: border-box;
 }
+
+
+html {
+  font-size: 62.5%;
+}
+
+@media only screen and (min-width:651px) {
+  body * {
+    font-size: 100%;
+  }
+  .content{
+      background-color: white;
+  }
+
+}
+ 
+@media only screen and (min-width:961px) {
+  body * {
+    font-size: 120%;
+  }
+  .content{
+      background-color: white;
+  }
+
+}
+
